# django-payment-study

./: .env  README.md  db.sqlite3  pyproject.toml  requirements.txt
mall/: models.py  views.py
mall/management/commands/: load_products.py
mall/migrations/: 0006_alter_order_options_alter_order_status_and_more.py
mall_test/: models.py
mall_test/templates/mall_test/: payment_form.html
mysite/: settings.py
